# RL_Navigation

./: CMakeLists.txt  README.md  package.xml  setup.py
checkpoints/: checkpoints_actor.pth
launch/: isaac_train.launch.py
research_log/: 2504_log.md
scripts/: TD3.py  TD_CBAM.py  TD_CBAM2.py  TD_modify.py  lidar_preprocessing.py  path.py  potential_field.py  replay_memory.py  reward.py  train.py
