<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_navigation</name>
  <version>0.0.0</version>
  <description>RL based Navigation with Isaac Sim</description>
  <maintainer email="jongyoonpark0621@gmail.com">j-wye</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
